--- a/pom.xml
+++ b/pom.xml
@@ -55,38 +55,36 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <encoding>UTF-8</encoding>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>8.1.8.v20121106</version>
+                <version>8.1.4.v20120524</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.eclipse.jetty</groupId>
                         <artifactId>jetty-ajp</artifactId>
-                        <version>8.1.8.v20121106</version>
+                        <version>8.1.4.v20120524</version>
                     </dependency>
                 </dependencies>
                 <configuration>
                     <connectors>
                         <connector implementation="org.eclipse.jetty.ajp.Ajp13SocketConnector">
-                            <host>127.0.0.1</host>
-                            <port>9999</port>
+                            <port>9995</port>
                         </connector>
                         <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <host>127.0.0.1</host>
-                            <port>8080</port>
+                            <port>9998</port>
                         </connector>
                     </connectors>
                     <webApp>
-                        <contextPath>/</contextPath>
+                        <contextPath>/santa</contextPath>
                     </webApp>
                     <stopKey>1</stopKey>
                     <stopPort>10000</stopPort>
-                    <scanIntervalSeconds>1</scanIntervalSeconds>
+                    <scanIntervalSeconds>0</scanIntervalSeconds>
                 </configuration>
             </plugin>
         </plugins>
